samples/_failures_safe/1761124740_d7ddc9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ddfc2426.c: In function ‘main’:
./samples/SAFE/__tmp_ddfc2426.c:141:80: error: expected ‘)’ at end of input
  141 |     printf("\nValidation: %d/%d entries have valid log levels\n", valid_entries
      |           ~                                                                    ^
      |                                                                                )
./samples/SAFE/__tmp_ddfc2426.c:141:5: error: expected declaration or statement at end of input
  141 |     printf("\nValidation: %d/%d entries have valid log levels\n", valid_entries
      |     ^~~~~~
